deployment/deployment.yaml
# filename: deployment/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: transformer-summary
  labels:
    app: news-summary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-summary
  template:
    metadata:
      labels:
        app: news-summary
    spec:
      containers:
        - name: news-summary
          image: pafruchtenreich/app:latest  
          ports:
            - containerPort: 8000
