deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transformer-summary
spec:
  selector:
    app: news-summary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
